Resolved several warning messages